# Templates

./: COPYING  README.md  ioports.c  ioports.h  mcodes.c  mcodes.h
arm-driver/: driver.c  serial.c  serial.h
my_plugin/: README.md
my_plugin/FluidNC_ESP3D_cmd/: CMakeLists.txt  README.md  fnc_esp3d_cmd.c
my_plugin/MCU load/: my_plugin.c
my_plugin/MCU_load/: README.md  my_plugin.c
my_plugin/MQTT_example/: README.md  my_plugin.c
my_plugin/Macros bound to aux inputs/: my_plugin.c
my_plugin/Macros_bound_to_aux_inputs/: README.md  my_plugin.c
my_plugin/Modbus_command/: README.md  my_plugin.c
my_plugin/Motor power monitor/: my_plugin.c
my_plugin/Motor_power_monitor/: README.md  my_plugin.c
my_plugin/Pause_on_SD_file_run/: README.md  my_plugin.c
my_plugin/Persistent_tool/: my_plugin.c
my_plugin/Probe_select/: my_plugin.c
my_plugin/Probe_select2/: CMakeLists.txt  my_plugin.c
my_plugin/RGB_LED_M150/: my_plugin.c
my_plugin/Real time report timestamp/: my_plugin.c
my_plugin/Realtime_report_aux_out_state/: README.md  my_plugin.c
my_plugin/Realtime_report_timestamp/: README.md  my_plugin.c
my_plugin/STM32F411_blinky/: my_plugin.c
my_plugin/Set_output_on_feed_hold/: README.md  my_plugin.c
my_plugin/Solenoid spindle/: my_plugin.c
my_plugin/Solenoid_spindle/: README.md  my_plugin.c
my_plugin/Stepper enable control/: my_plugin.c
my_plugin/hpgl/: CMakeLists.txt  README.md  arc.c  arc.h  charset0.c  clip.c  font173.c  hpgl.c  hpgl.h  htext.c  htext.h  motori.c  motori.h  scale.c  scale.h  shvars.c  shvars.h
my_plugin/probe select/: my_plugin.c
(+6 files in other folders)
